@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-02-23T00:55:24Z",
-  "count_outdated" : 31,
-  "uniques_outdated" : 3,
-  "count" : 35,
-  "uniques" : 5,
+  "timestamp" : "2025-09-17T01:15:46Z",
+  "count_outdated" : 35,
+  "uniques_outdated" : 5,
+  "count" : 36,
+  "uniques" : 6,
   "views" : [
     {
-      "timestamp": "2024-02-22T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "timestamp": "2025-09-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
