@@ -1,11 +1,11 @@
 {
-  "count": 4,
-  "uniques": 2,
+  "count": 1,
+  "uniques": 1,
   "views": [
     {
-      "timestamp": "2024-02-22T00:00:00Z",
-      "count": 4,
-      "uniques": 2
+      "timestamp": "2025-09-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
